# X0V-Renderer

./: .gitignore  CMakeLists.txt  ReadMe.md
assets/shaders/: block-shader.frag  block-shader.vert  light-receiver-shader.frag  light-source-shader.frag  surface-shader.frag
resources/shaders/: shader.frag  shader.vert
src/: main.cpp
src/core/renderer/camera/: Camera.cpp  Camera.h
src/core/renderer/shader/: Shader.cpp
src/core/renderer/texture/: Texture.cpp  Texture.h
src/core/renderer/window/: window.cpp
src/renderer/: Renderer.cpp  Renderer.h
src/renderer/block/: BlockMeshGenerator.cpp  BlockMeshGenerator.h  BlockRegistry.cpp  BlockRegistry.h  BlockType.cpp  BlockType.h
src/renderer/camera/: Camera.cpp  Camera.h
src/renderer/color/: Color.cpp  Color.h
src/renderer/light/: DirectionalLight.cpp  DirectionalLight.h  LightData.h  LightManager.cpp  LightManager.h  PointLight.cpp  PointLight.h  SpotLight.h
src/renderer/light/lights/: DirectionalLight.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/renderer/material/: DefaultMaterial.hpp  Material.cpp  Material.h
src/renderer/mesh/: Mesh.cpp  Mesh.h  VertexAttribute.h
src/renderer/render_entity/: RenderEntity.cpp  RenderEntity.h
src/renderer/scene/: Scene.cpp  Scene.h
src/renderer/shader/: Shader.cpp  Shader.h  ShaderProvider.cpp  ShaderProvider.h  ShaderType.h
src/renderer/texture/: Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/renderer/transform/: Transform.cpp  Transform.h
src/renderer/window/: window.cpp  window.h
